<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_PIST_STATUS" Id="{b13e0194-d4b5-4bac-985f-183db955bd6a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PIST_STATUS :
(
	UNINIT:=0,INIT,READY,OPENED,CLOSED,OPENING,CLOSING,ERROR,PAUSE,NEUTRALIZE,NEUTRAL
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>