<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_PIST_TYPE" Id="{ba0d0d3f-e700-4765-861f-df082f3e33a6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PIST_TYPE :
(
	NO_SENSORS:=0,
	ONLY_OPEN,
	ONLY_CLOSE,
	BOTH
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>