<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_PIST" Id="{355e3a0f-01dd-4caf-8ab7-c00715794fa7}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	fbPistTest: FB_PIST;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>